# AYC-bot

./: .gitignore  Dockerfile  bot.py  docker-compose.example.yml  pyproject.toml  requirements.txt
cogs/: auto_mod.py  cloudflare.py  command_logger.py  emoji.py  error_handler.py  lewd.py  llm.py  member_count_update.py  message_logger.py  msg_command.py  reaction_logger.py  slh_command.py  special_reaction.py  thread_about.py  usr_command.py  voice_logger.py
core/: emoji_list.py  imagen.py  shared.py  text_to_image.py  utils.py  yao_yt_dlp.py
deprecate/: lewd.py  music.py
model/: music_model.py
