[project]
name = "ayc-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jeff", email = "jeffpeng2012@gmail.com" }
]
dependencies = [
    "aiohttp",
    "py-cord[speed,voice]",
    "setuptools",
    "cloudflare>=4.1.0",
    "google-generativeai>=0.8.4",
    "pilmoji>=2.0.4",
    "emoji==2.11",
    "jieba",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.uv]
managed = true
dev-dependencies = []
package = false

[tool.uv.sources]
jieba = { git = "https://github.com/jeffpeng3/jieba-tw.git" }
