[project]
name = "ayc-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jeff", email = "jeffpeng2012@gmail.com" }
]
dependencies = [
    "aiohttp",
    "google-genai",
    "py-cord[speed]",
    "setuptools",
    "cloudflare>=3.1.1",
]
readme = "README.md"
requires-python = ">= 3.12"

